--- a/categories/template/index.html
+++ b/categories/template/index.html
@@ -13,7 +13,7 @@
 <meta property='og:type' content='website'><meta property='og:updated_time' content=' 2023-06-07T00:00:00&#43;00:00 '/>
 <meta name="twitter:title" content="Category: template - zayn_lie&#39;s blog">
 <meta name="twitter:description" content=""><link rel="alternate" type="application/rss&#43;xml" href="/categories/template/index.xml">
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon-32x32.png" />
 
     </head>
     <body class="">
@@ -245,7 +245,7 @@
         <div class="article-details">
             <h2 class="article-title">Blog Template</h2>
             <footer class="article-time">
-                <time datetime='1145-01-04T11:45:14&#43;08:00'>Jan 04, 1145</time>
+                <time datetime='1145-01-04T11:45:14&#43;08:00'>01/04/45</time>
             </footer>
         </div>
     </a>
